# nancy-brain

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  README.md  TODO.md  build_docker.sh  conftest.py  environment.yml  hatch_hooks.py  mkdocs.yml  netlify.toml  pyproject.toml  pytest.ini  run_mcp_server.py  test_server.py  tmp_config.yml  tmp_weights.yaml
config/: articles.yml  index_weights.yaml  model_weights.yaml  repositories.yml
docs/: MCP_SERVER.md
docs_site/: CNAME  configuration.md  index.md  installation.md  privacy.md  quick-start.md
examples/: docker-compose.self-hosted.yml  mcp-settings.example.json
nancy_brain/: __init__.py  _build_info.py  admin_ui.py  article_import.py  chunking.py  cli.py  config_validation.py  env_import.py  summarization.py
rag_core/: __init__.py  rag_service_old.py  registry.py  search.py  service.py  store.py  types.py
scripts/: build_knowledge_base.py  manage_articles.py  manage_pdf_articles.py  manage_repositories.py  pdf_utils.py  script_utils.py
tests/: test_admin_ui.py  test_admin_ui_smoke.py  test_admin_ui_utils.py  test_article_import.py  test_build_improvements.py  test_build_integration.py  test_build_kb_utils.py  test_chunking.py  test_cli.py  test_cli_extended.py  test_cli_missing_embeddings.py  test_config_validation.py  test_env_import.py  test_gpt_action_schema_contract.py  test_http_api.py  test_http_integration.py  test_http_simple.py  test_kb_pipeline.py  test_manage_articles.py  test_manage_pdf_articles.py  test_manage_repositories.py  test_mcp_server.py  test_mcp_streamable_http.py  test_new_gemini.py  test_pdf_utils.py  test_registry.py  (+15 more)
(+42 files in other folders)
