[project]
name = "nancy-brain"
version = "0.1.0"
description = "Nancy Brain - RAG service for microlensing research AI assistant"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Amber Malpas", email = "malpas.1@osu.edu"}
]
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.8.0",
    "slack-sdk>=3.18.0",
    "slack-bolt>=1.18.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=5.3",
    "txtai>=7.0.0",
    "requests>=2.28.0",
    "torch>=1.12.1",
    "faiss-cpu>=1.7.1.post2",
    "transformers>=4.45.0",
    "regex>=2022.8.17",
    "nb4llm>=0.1.3",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "mcp>=1.13.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "ipykernel",
    "jupyter",
    "ipywidget"
]
pdf = [
    "tika>=2.6.0",
    "PyPDF2",
    "pdfplumber",
    "pymupdf"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "rag_core",
    "connectors",
    "scripts"
]
